syntax = "proto3";

package protobuf.auth.v1;

option go_package = "github.com/sena1267/cycle-note/gen/protobuf/auth/v1;authv1";

service AuthService{
  rpc SignUp(SignUpRequest) returns (SignUpResponse) {}
  rpc SignIn(SignInRequest) returns (SignInResponse) {}
}

message SignUpRequest {
  string email = 1;
  string name = 2;
  string password = 3;
}

message SignUpResponse {
  string token = 1;
}

message SignInRequest {
  string email = 1;
  string password = 2;
}

message SignInResponse {
  string token = 1;
}
